--- a/biblioteca_digital/views/static/css/header.css
+++ b/biblioteca_digital/views/static/css/header.css
@@ -2,7 +2,7 @@
 .header-pantalla {
     height: 60px;
     position: relative;
-    border-bottom: 2px solid #1fb5ad;
+    border-bottom: 2px solid #8B1D69;
     background-image: url('/static/imagenes/cover_alta.png');
     background-position: center top;
     background-repeat: no-repeat;
