--- a/biblioteca_digital/views/templates/components/form_ejemplares.html
+++ b/biblioteca_digital/views/templates/components/form_ejemplares.html
@@ -5,11 +5,14 @@
 <div class="row mt-4 pt-4">
     <div class="col-10">
         <label for="palabras_clave">Palabras Clave:</label>
+        <small class="text-danger ms-2">(Las etiquetas deben estar separadas por comas. Ejemplo: etiqueta, etiqueta, etiqueta, ...)</small>
         <input type="text" class="form-control" value="Escriba aquí..." id="palabras_clave" name="palabras_clave" required>
     </div>
 </div>
-<div class="col-12 mt-3" style="height: 30px;">
-    <hr class="custom-dashed-line">
+<div class="row">
+    <div class="col-12" style="height: 30px;">
+        <hr class="custom-dashed-line">
+    </div>
 </div>
 
 <!-- Contenedor para ejemplares -->
