--- a/biblioteca_digital/views/templates/home.html
+++ b/biblioteca_digital/views/templates/home.html
@@ -26,9 +26,9 @@
         <div class="col-lg-6 col-md-5 d-flex justify-content-center align-items-center transparencia logo-trans-background">
             <!-- Contenedor de botones con superposición -->
             <div class="content-overlay d-flex flex-column justify-content-center align-items-start">
-                <a class="btn btn-home mb-3" href="#" role="button">PRESTAMOS</a>
+                <a class="btn btn-home mb-3" href="{% url 'prestamos' %}" role="button">PRESTAMOS</a>
                 <a class="btn btn-home mb-3" href="{% url 'alta_material' %}" role="button">ALTA MATERIAL</a>
-                <a class="btn btn-home mb-3" href="#" role="button">MODIFICACION <br>MATERIAL</a>
+                <a class="btn btn-home mb-3" href="{% url 'modificacion_materiales' %}" role="button">MODIFICACION <br>MATERIAL</a>
             </div>
         </div>
     </div>       
