--- a/biblioteca_digital/views/templates/modals/manual_modal.html
+++ b/biblioteca_digital/views/templates/modals/manual_modal.html
@@ -2,6 +2,6 @@
 <div id="manualModal" class="modal">
     <div class="modal-content">
         <button onclick="document.getElementById('manualModal').style.display='none'" class="close-button">&times;</button>
-        <!-- Aquí irá el contenido del modal -->
+        <div class="en-construccion">En construcción</div>
     </div>
 </div>
