--- a/biblioteca_digital/views/templates/components/header.html
+++ b/biblioteca_digital/views/templates/components/header.html
@@ -13,5 +13,12 @@
                 <img src="{% static 'imagenes/Logo_inicio.png' %}" alt="Logo" class="cover-pic">
             </a>
         </div>
+    {% elif request.resolver_match.url_name == 'modificacion_editar_material' %}
+        <div class="header-content">
+            <h1 class="header-title"> MODIFICACION </h1>
+            <a href="{% url 'home' %}" class="logo-link">
+                <img src="{% static 'imagenes/Logo_inicio.png' %}" alt="Logo" class="cover-pic">
+            </a>
+        </div>
     {% endif %}
 </header>
