--- a/biblioteca_digital/libros/templates/libros/alta_libro.html
+++ b/biblioteca_digital/libros/templates/libros/alta_libro.html
@@ -30,6 +30,15 @@
             </div>
         </div>
 
-        {% include 'components/form_ejemplares.html' %}
+        <div class="row mb-3">
+    <div class="col-12">
+        <button type="button" class="btn btn-secondary" onclick="agregarFilaLibro()">
+            Agregar Ejemplar
+        </button>
+    </div>
+</div>
+<div id="dynamic-rows-libro">
+    <!-- Las filas dinámicas de ejemplares de libro se cargarán aquí -->
+</div>
     </div>
 </div>
