--- a/biblioteca_digital/views/templates/components/header.html
+++ b/biblioteca_digital/views/templates/components/header.html
@@ -13,7 +13,7 @@
                 <img src="{% static 'imagenes/Logo_inicio.png' %}" alt="Logo" class="cover-pic">
             </a>
         </div>
-    {% elif request.resolver_match.url_name == 'modificacion_editar_material' %}
+    {% elif request.resolver_match.url_name == 'modificacion_editar_material' or request.resolver_match.url_name == 'modificacion_materiales' %}
         <div class="header-content">
             <h1 class="header-title"> MODIFICACION </h1>
             <a href="{% url 'home' %}" class="logo-link">
@@ -21,4 +21,5 @@
             </a>
         </div>
     {% endif %}
+
 </header>
